Moving towards a consistent pattern for responses: every result has a DataSource the response came from. If an error occurred before the DataSource was queried, the source will be null. Also, plenty of cleanup.